--- a/apps/vite-react/package.json
+++ b/apps/vite-react/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:8080",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3008",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
