--- a/apps/vite-react/package.json
+++ b/apps/vite-react/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.2.5",
+    "object-hash": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/object-hash": "^3.0.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
