--- a/apps/vite-solidjs/package.json
+++ b/apps/vite-solidjs/package.json
@@ -11,16 +11,18 @@
     "preview": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
+    "axios": "^1.2.6",
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "sirv": "^2.0.2",
     "solid-js": "^1.6.4"
   },
   "devDependencies": {
+    "@types/object-hash": "^3.0.2",
     "cross-env": "^7.0.3",
-    "vite": "^4.0.0",
-    "tsconfig": "*",
     "eslint-config-custom": "*",
+    "tsconfig": "*",
+    "vite": "^4.0.0",
     "vite-plugin-solid": "^2.5.0"
   }
 }
