--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "workspaces": [
     "apps/*",
-    "apps/vite-react/",
     "packages/*"
   ],
   "scripts": {
@@ -14,7 +13,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "workspace:*",
     "prettier": "latest",
     "turbo": "latest"
   },
@@ -22,5 +21,5 @@
     "node": ">=14.0.0"
   },
   "dependencies": {},
-  "packageManager": "npm@7.24.0"
+  "packageManager": "pnpm@7.26.2"
 }
