--- a/apps/vite-svelte/package.json
+++ b/apps/vite-svelte/package.json
@@ -12,12 +12,15 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
+    "eslint-config-custom": "*",
     "svelte": "^3.54.0",
     "svelte-check": "^2.10.0",
+    "tsconfig": "*",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
-    "tsconfig": "*",
-     "eslint-config-custom": "*",
     "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.2.6"
   }
 }
